impemented graph plotter for scores, renaming files

--- a/thesis_code/main.ipynb
+++ b/thesis_code/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1189,6 +1189,54 @@
     "axes.get_xaxis().set_major_formatter(ScalarFormatter())\n",
     "plt.savefig(f\"./data/score_topic_graph.png\", dpi=300)\n",
     "plt.close('all')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "switch = True\n",
+    "if switch:\n",
+    "    score_file_path = \"data/score_by_top_topic.json\"\n",
+    "    title = \"'Score by Top Topic'-Topic Graph for LDA Models\"\n",
+    "    y_label = \"Score by Top Topic (lower is better)\"\n",
+    "else:\n",
+    "    score_file_path = \"data/score_by_topic_probability_values.json\"\n",
+    "    title = \"'Score by Topic Probability'-Topic Graph for LDA Models\"\n",
+    "    y_label = \"Score by Topic Probability (lower is better)\"\n",
+    "if os.path.isfile(score_file_path):\n",
+    "    with open(score_file_path, 'r') as file:\n",
+    "        score_values = json.load(file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['lda-wiki_nt-gpt2_nt-is',\n 'lda-wiki_nt-gpt2_nt-un',\n 'lda-gpt2_nt-gpt2_nt-is',\n 'lda-gpt2_nt-gpt2_nt-un',\n 'lda-gpt2_nt-arxiv-is',\n 'lda-gpt2_nt-arxiv-un',\n 'lda-wiki_nt-arxiv-is',\n 'lda-wiki_nt-arxiv-un',\n 'lda-gpt2-gpt2-is',\n 'lda-gpt2-gpt2-un']"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(score_values.keys())"
    ],
    "metadata": {
     "collapsed": false,
