data_folder path change

--- a/thesis_code/main.ipynb
+++ b/thesis_code/main.ipynb
@@ -998,6 +998,69 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "path_dictionary_1 = \"data/lda-wiki_nt-gpt2_nt/gpt2_nt/intersection/2/dictionary_2\"\n",
+    "path_dictionary_2 = \"data/lda-wiki_nt-gpt2_nt/gpt2_nt/union/2/dictionary_2\"\n",
+    "dictionary_1 = SaveLoad.load(path_dictionary_1)\n",
+    "dictionary_2 = SaveLoad.load(path_dictionary_2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "36778"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dictionary_1.keys())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "67773"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dictionary_2.keys())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## Full Data Processing"
