fixing path bug

--- a/thesis_code/main.ipynb
+++ b/thesis_code/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -28,6 +28,7 @@
     "import logging\n",
     "import random\n",
     "import itertools\n",
+    "from operator import itemgetter\n",
     "from gensim.test.utils import datapath\n",
     "import re\n",
     "import json\n",
@@ -827,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def score_by_topic_probability(ldamodel_1, ldamodel_2, corpus_1, corpus_2, distance='jensen_shannon'):\n",
@@ -843,7 +844,7 @@
     "        topic_corpus_prob_1[key] = val\n",
     "    for key, val in probas_2:\n",
     "        topic_corpus_prob_2[key] = val\n",
-    "    return (np.sum(topic_corpus_prob_1 * min1) + np.sum(topic_corpus_prob_2 * min2))/2\n",
+    "    return (np.sum(topic_corpus_prob_1 * min1) + np.sum(topic_corpus_prob_2 * min2)) / 2\n",
     "\n",
     "\n",
     "def score_by_top_topic(ldamodel_1, ldamodel_2, corpus_1, corpus_2, distance='jensen_shannon'):\n",
@@ -851,18 +852,19 @@
     "    mdiff2, annotation2 = ldamodel_2.diff(ldamodel_1, distance=distance, num_words=1000000000)\n",
     "    min1 = np.amin(mdiff1, axis=1)\n",
     "    min2 = np.amin(mdiff2, axis=1)\n",
+    "\n",
     "    cnt1 = np.zeros(ldamodel_1.num_topics)\n",
     "    for doc in corpus_1:\n",
-    "        prob = ldamodel_1.get_document_topics(doc, minimum_probability=0.0)\n",
-    "        topic = max(prob, prob.get)\n",
-    "        cnt1[topic] += 1\n",
+    "        topic_prob_list = ldamodel_1.get_document_topics(doc, minimum_probability=0.0)\n",
+    "        topic_prob_tupel = max(topic_prob_list, key=itemgetter(1))\n",
+    "        cnt1[topic_prob_tupel[0]] += 1\n",
     "    cnt2 = np.zeros(ldamodel_1.num_topics)\n",
     "    for doc in corpus_2:\n",
-    "        prob = ldamodel_2.get_document_topics(doc, minimum_probability=0.0)\n",
-    "        topic = max(prob, prob.get)\n",
-    "        cnt2[topic] += 1\n",
+    "        topic_prob_list = ldamodel_2.get_document_topics(doc, minimum_probability=0.0)\n",
+    "        topic_prob_tupel = max(topic_prob_list, key=itemgetter(1))\n",
+    "        cnt2[topic_prob_tupel[0]] += 1\n",
     "\n",
-    "    return (np.sum(cnt1 * min1)/np.sum(cnt1) + np.sum(cnt2 * min2)/np.sum(cnt2)) / 2"
+    "    return (np.sum(cnt1 * min1) / np.sum(cnt1) + np.sum(cnt2 * min2) / np.sum(cnt2)) / 2"
    ],
    "metadata": {
     "collapsed": false,
@@ -1451,6 +1453,112 @@
     "pycharm": {
      "name": "#%%\n",
      "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19000747182747096\n",
+      "0.1996428388861695\n"
+     ]
+    }
+   ],
+   "source": [
+    "path1 = \"lda-wiki_nt-gpt2_nt/gpt2_nt\"\n",
+    "path2 = \"lda-wiki_nt-gpt2_nt/wiki_nt\"\n",
+    "i = 1\n",
+    "j = 1\n",
+    "mode = 'intersection'\n",
+    "topic = 5\n",
+    "path_ldamodel_1 = f\"./data/{path1}/{i}/{mode}/{topic}/ldamodel_{topic}\"\n",
+    "path_ldamodel_2 = f\"./data/{path2}/{j}/{mode}/{topic}/ldamodel_{topic}\"\n",
+    "path_corpus_1 = f\"./data/{path1}/{i}/{mode}/{topic}/corpus_{topic}\"\n",
+    "path_corpus_2 = f\"./data/{path2}/{j}/{mode}/{topic}/corpus_{topic}\"\n",
+    "\n",
+    "# Load pretrained models from disk.\n",
+    "with open(path_corpus_1, 'r') as file:\n",
+    "    corpus_1 = json.load(file)\n",
+    "with open(path_corpus_2, 'r') as file:\n",
+    "    corpus_2 = json.load(file)\n",
+    "ldamodel_1 = LdaMulticore.load(path_ldamodel_1)\n",
+    "ldamodel_2 = LdaMulticore.load(path_ldamodel_2)\n",
+    "\n",
+    "# Compare models with scores_by_topic_probability and save\n",
+    "diff_score = score_by_topic_probability(ldamodel_1, ldamodel_2, corpus_1, corpus_2)\n",
+    "print(diff_score)\n",
+    "# Compare models with score_by_top_topic and save\n",
+    "diff_score = score_by_top_topic(ldamodel_1, ldamodel_2, corpus_1, corpus_2)\n",
+    "print(diff_score)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19000747182747096\n",
+      "0.1996428388861695\n"
+     ]
+    }
+   ],
+   "source": [
+    "path1 = \"lda-wiki_nt-gpt2_nt/gpt2_nt\"\n",
+    "path2 = \"lda-wiki_nt-gpt2_nt/wiki_nt\"\n",
+    "i = 1\n",
+    "j = 2\n",
+    "mode = 'intersection'\n",
+    "topic = 5\n",
+    "path_ldamodel_1 = f\"./data/{path1}/{i}/{mode}/{topic}/ldamodel_{topic}\"\n",
+    "path_ldamodel_2 = f\"./data/{path2}/{j}/{mode}/{topic}/ldamodel_{topic}\"\n",
+    "path_corpus_1 = f\"./data/{path1}/{i}/{mode}/{topic}/corpus_{topic}\"\n",
+    "path_corpus_2 = f\"./data/{path2}/{j}/{mode}/{topic}/corpus_{topic}\"\n",
+    "\n",
+    "# Load pretrained models from disk.\n",
+    "with open(path_corpus_1, 'r') as file:\n",
+    "    corpus_1 = json.load(file)\n",
+    "with open(path_corpus_2, 'r') as file:\n",
+    "    corpus_2 = json.load(file)\n",
+    "ldamodel_1 = LdaMulticore.load(path_ldamodel_1)\n",
+    "ldamodel_2 = LdaMulticore.load(path_ldamodel_2)\n",
+    "\n",
+    "# Compare models with scores_by_topic_probability and save\n",
+    "diff_score = score_by_topic_probability(ldamodel_1, ldamodel_2, corpus_1, corpus_2)\n",
+    "print(diff_score)\n",
+    "# Compare models with score_by_top_topic and save\n",
+    "diff_score = score_by_top_topic(ldamodel_1, ldamodel_2, corpus_1, corpus_2)\n",
+    "print(diff_score)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
